# biri-youyaku

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONFIG.md  CONTRIBUTING.md  DEPLOY.md  README.en.md  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml
.github/: pull_request_template.md
docs/: author-distill-status.md  code-audit-2026-06-27.md  code-review-2026-06-14.md  enhancement-plan.md  improvement-plan.md  optimization-plan.md  perf-and-cleanup-plan.md  redesign-plan.md
server/: .dockerignore  .env.example  Dockerfile  pyproject.toml
server/biri_youyaku/: app.py  auth.py  cf_access.py  config.py  db.py  events.py  llm_url.py  logging.py  rate_limit.py
server/biri_youyaku/distill/: _util.py  assembler.py  model.py  orchestrator.py  repo.py
server/biri_youyaku/jobs/: __init__.py  cleanup.py  model.py  pipeline.py  repo.py  runner.py  tags_backfill.py
server/biri_youyaku/modules/: _cache.py  _http.py  transcript.py
server/biri_youyaku/modules/asr/: __init__.py  base.py  formatter.py  parakeet_mlx.py  sensevoice.py  sensevoice_mlx.py  whisper.py
server/biri_youyaku/modules/bilibili/: __init__.py  _guard.py  audio.py  dynamic.py  meta.py  space.py  subtitle.py  wbi.py
server/biri_youyaku/modules/email/: __init__.py  webhook.py
server/biri_youyaku/modules/llm/: __init__.py  balance.py  client.py  distill.py  distill_prompts.py  prompts.py  segmenter.py
server/biri_youyaku/modules/storage/: __init__.py  audio.py  distill.py  summary.py
server/biri_youyaku/routes/: __init__.py  config.py  distill.py  healthz.py  jobs.py  up.py
server/tests/: conftest.py  test_asr_backend.py  test_bilibili_audio.py  test_bilibili_meta.py  test_cleanup.py  test_config_and_audio_routes.py  test_distill_assembler.py  test_distill_job_integration.py  test_distill_orchestrator.py  test_distill_repo.py  test_distill_routes.py  test_dynamic.py  test_email_webhook.py  test_events.py  test_job_options.py  test_job_repo.py  test_llm_balance.py  test_llm_client.py  test_runner_await_completion.py  test_runner_pause.py  test_segmenter.py  test_sensevoice.py  test_tags.py  test_up_routes.py  test_up_space.py
(+96 files in other folders)
