[project]
name = "biri-youyaku-server"
version = "0.1.0"
description = "Standalone web backend for Biri-Youyaku video summaries"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "openai>=1.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sse-starlette>=2.1.0",
  "uvicorn[standard]>=0.29.0",
  "yt-dlp>=2024.5.27",
]

[project.optional-dependencies]
asr = [
  "funasr>=1.1.0",
  "torch>=2.2.0",
  "torchaudio>=2.2.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["biri_youyaku*"]
exclude = ["data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
